[project]
name = "kiro-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "loguru",
    "python-dotenv",
    "tiktoken",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "hypothesis",
]
